[package]
name = "runner"
version = "0.1.0"
authors = ["Mark Mansi <markm@cs.wisc.edu>"]
edition = "2018"

[dependencies]
#spurs = { git = "https://github.com/mark-i-m/spurs.git" }
#spurs = { path = "/nobackup/spurs" }
spurs = "0.2.0"
clap = { version = "2.32.0", features = [ "color" ] }
failure = "0.1.4"
chrono = "0.4.6"
env_logger = "0.6.0"
