[package]
name = "runner"
version = "0.1.0"
authors = ["Mark Mansi <markm@cs.wisc.edu>"]
edition = "2018"

[dependencies]
#spurs = { git = "https://github.com/mark-i-m/spurs.git" }
#spurs = { path = "/nobackup/spurs" }
spurs = "0.4.1"
clap = { version = "2.32.0", features = [ "color" ] }
failure = "0.1.5"
failure_derive = "0.1.5"
chrono = "0.4.6"
env_logger = "0.6.0"
serde = "1.0.87"
serde_json = "1.0.38"
