[package]
name = "runner"
version = "0.1.0"
authors = ["Mark Mansi <markm@cs.wisc.edu>"]
edition = "2018"

[dependencies]
#spurs = { path = "/nobackup/spurs/spurs" }
#spurs-util = { path = "/nobackup/spurs/spurs-util" }
spurs = "0.8.2"
spurs-util = "0.2.2"
clap = { version = "2.32.0", features = [ "color" ] }
failure = "0.1.5"
failure_derive = "0.1.5"
chrono = "0.4.6"
env_logger = "0.6.0"
serde = { version = "1.0.87", features = [ "derive" ] }
serde_json = "1.0.38"
bitflags = "1.1"
console = "0.9.1"
